## 4.99.x (Version 5 Beta Releases)

### Fixes/changes since initial Beta

* Fix pin colors when showing pins for all selected items.
* Fix pins not showing when clicking on map
* Show/Hide pins for all selected images, not just the most selected image
* Show/Hide grayed out images
* map search bar alignment (trailing)
* Add command-L as shortcut for locn from track
* do not apply track log points when time +/- 6 hours of image time
* Fixed multiple sheets when loading good and bad track logs
* Fixed crash -- missing environment object when scrolling table
* Open With now works
* Use custom pin that changes during drag operations. Replaces deprecated code.
* fixed table view bugs, a side effects of fixing the table crash
* internal changes
  - remove "Publishing changes from within view updates is not allowed" warnings
    due to SwiftUI sometimes having problems binding to Published variables.
  - Depricated code to change map types removed.  Now using map configuaration

Known Bugs

* Right pane divider location on start -- partially fixed
* When Metal validation enabled program crashes when divider is moved

## 4.15

### Updates

* Add a do not backup option to program preferences.  Not recommended, but
  provided for those who know they always have backups of all their images and
  see no need to create any more.

* Ignore jpg/jpeg files that are part of a raw+jpg pair. Such files are only
  ignored when both files of a pair are in the same folder and are opened
  at the same time.

* Exiftool 12.41; adds support for OM-1 (OM Digital Systems)

## GeoTag 4.14

### Update

* Exiftool version 12.39

### Bug Fix

* Date/Times could only be modified.  A Date/Time could not be assigned
  to an image that did not have a create date.  Fixed.

## GeoTag 4.13

### Bug Fix

* The map search bar got buried under the map and somehow I didn't notice
  before releasing 4.12.

* Resizing window did bad things

## GeoTag 4.12

### New Features
